# hello_server

./: .clang-format  .clang-tidy  .env  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.runtime  README.md  build.sh  build_in_docker.sh  build_product_image.sh  conanfile.py  docker-compose.telemetry.yaml  docker-compose.yaml  start_service.sh  stop_service.sh
.devcontainer/: Dockerfile.devcontainer  devcontainer.json  docker-compose.yaml
cmake/: ClangTools.cmake  CommonConfig.cmake  VersionConfig.cmake
common/logger/: CMakeLists.txt  logger.cpp  logger.hpp
common/telemetry/: CMakeLists.txt  telemetry.cpp  telemetry.hpp
conanfile/: linux_aarch64_debug  linux_aarch64_release  linux_x86_64_debug  linux_x86_64_release
config/alloy/: config.alloy
config/grafana/provisioning/dashboards/: dashboards.yaml  grpc_golden_signals.json  service_health.json
config/grafana/provisioning/datasources/: loki.yaml  prometheus.yaml  tempo.yaml
config/loki/: loki-config.yaml
config/prometheus/: prometheus.yml
config/prometheus/rules/: hello_server.yml
config/tempo/: tempo.yaml
docs/: clang-format.md  clang-tidy.md  docker.md
package/: Dockerfile
services/proto/: CMakeLists.txt  server_messages.proto
services/proto/proto_cpp/: server_messages.grpc.pb.cc  server_messages.grpc.pb.h  server_messages.pb.cc  server_messages.pb.h
services/server/: CMakeLists.txt
services/server/src/: hello_server.c  hello_server.cpp
services/server/src/routes/: routes.cpp  routes.hpp
